prevent too wide image-title-box

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -49,6 +49,7 @@ body.page {
         position: absolute;
         top: 3em;
         left: 50%;
+        max-width: 50%;
         transform: translateX(-50%);
         color: white;
 
